test/org/midica/testfiles/failing/eff-flow-note-invalid.midica
INCLUDE inc/instruments.midica


0: poly_at.note(c+6).set(123)
